<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="@dimen/standard_4"
        card_view:cardElevation="@dimen/standard_4"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_240">

            <ImageView
                android:id="@+id/movieImage"
                android:layout_width="match_parent"
                android:transitionName="@string/imageTransition"
                android:layout_height="match_parent"
                android:background="@color/black99"
                android:contentDescription="@string/lint_icon"
                android:scaleType="fitXY" />

            <LinearLayout
                android:id="@+id/ratingLay"
                android:layout_width="@dimen/standard_36"
                android:layout_height="@dimen/standard_36"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/standard_8"
                android:transitionName="@string/ratingTransition"
                android:background="@drawable/drawable_circle_yellow"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movieRating1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_24" />

                <TextView
                    android:id="@+id/movieRating2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_16" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shadow_bottom_to_top"
                android:orientation="vertical"
                android:padding="@dimen/standard_12">

                <TextView
                    android:id="@+id/movieYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_14" />

                <TextView
                    android:id="@+id/movieName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:transitionName="@string/nameTransition"
                    android:fontFamily="sans-serif-medium"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_14" />

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</layout>

